// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendIcon renders default icon correctly 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/toolbar/Send.png",
      }
    }
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
  />
</View>
`;

exports[`SendIcon renders white icon correctly 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/toolbar/SendWhite.png",
      }
    }
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
  />
</View>
`;
